# SUAIScheduleParser

./: main.py  model.py  parser_t.py  pyproject.toml  sh.docx
